flutter naming fixed

--- a/youtube_muxer_2025/android/build.gradle
+++ b/youtube_muxer_2025/android/build.gradle
@@ -1,4 +1,4 @@
-group = "com.example.youtube_muxer_2025"
+group = "com.example.youtube_muxer_2025"  // Make sure this matches
 version = "1.0-SNAPSHOT"
 
 buildscript {
