--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -16,15 +16,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   youtube_muxer_2025:
-    # When depending on this package from a real application you should use:
-    #   youtube_muxer_2025: ^x.y.z
-    # See https://dart.dev/tools/pub/dependencies#version-constraints
-    # The example app is bundled with the plugin so we use a path dependency on
-    # the parent directory to use the current plugin's version.
-    path: ../
-
+    path: ../  # Point to local directory instead of pub.dev version
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
