--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -10,10 +10,11 @@
     
     <application
         android:enableOnBackInvokedCallback="true"
-        android:label="test"
+        android:label="Youtube Muxer"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher"
-        tools:replace="android:label">
+        tools:replace="android:label"
+        tools:node="merge">
         <activity
             android:name=".MainActivity"
             android:exported="true"
