--- a/youtube_muxer_test_app/pubspec.yaml
+++ b/youtube_muxer_test_app/pubspec.yaml
@@ -1,5 +1,7 @@
+name: youtube_muxer_test_app
 dependencies:
   flutter:
     sdk: flutter
   youtube_muxer_2025:
-    path: ../youtube_muxer_2025  # Local path to your package
+    path: ../  # Local path to your package
+
