--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -18,11 +18,10 @@ dependencies:
     sdk: flutter
   youtube_muxer_2025:
     path: ../  # Point to local directory instead of pub.dev version
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   video_player: ^2.9.5
   youtube_explode_dart: ^2.4.0
+  permission_handler: ^11.4.0
 
 dev_dependencies:
   integration_test:
