--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
     sdk: flutter
   plugin_platform_interface: ^2.1.8
   path_provider: ^2.1.2
-  permission_handler: ^12.0.0+1
+  permission_handler: ^12.0.0
   device_info_plus: ^11.4.0
   youtube_explode_dart: ^2.4.0
 
